<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:padding="10dp"
    android:layout_height="wrap_content">


    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:id="@+id/email_txt"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/email_forgot"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="phone"
            android:drawableStart="@drawable/email"
            android:drawablePadding="10dp"
            android:hint="@string/enter_email"
            android:inputType="textEmailAddress" />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:visibility="gone"
        android:id="@+id/otp_txt"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/otp"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:autofillHints="phone"
            android:layout_gravity="center"
            android:drawablePadding="10dp"
            android:gravity="center"
            android:maxLength="4"
            android:hint="@string/otp"
            android:inputType="numberPassword" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:passwordToggleEnabled="true"
        android:layout_width="match_parent"
        android:visibility="gone"
        android:id="@+id/new_ps_txt"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">

        <EditText
            android:id="@+id/new_ps"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="password"
            android:drawableStart="@drawable/password"
            android:drawablePadding="10dp"
            android:layout_marginTop="10dp"
            android:hint="@string/new_password"
            android:inputType="textPassword" />

    </com.google.android.material.textfield.TextInputLayout>


    <Button
        android:id="@+id/new_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:visibility="gone"
        android:background="@drawable/button_bg"
        android:text="@string/submit"
        android:textAllCaps="false" />

    <Button
        android:id="@+id/get_otp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:background="@drawable/button_bg"
        android:text="@string/get_otp"
        android:textAllCaps="false" />


</LinearLayout>